--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 我是中传韩尬钲，上头细来下头粗
 若将韩钲倒过来，下头细来上头粗
-<img src="2.jpg" width="90" height="120" alt="2" />
+img src="2.jpg" width="90" height="120" alt="2" /
