--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 img src="2.jpg" width="90" height="120" alt="2" /
 
 <!doctype html>
-<html>
-<head>
+<html>index.html
 <meta charset="utf-8">
 <title>国服第一李白参上</title>
 </head>静夜思
