--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
-我是中传韩尬钲，上头细来下头粗
-若将韩钲倒过来，下头细来上头粗
-img src="2.jpg" width="90" height="120" alt="2" /
-
 <!doctype html>
-<html>index.html
+<html>
 <meta charset="utf-8">
 <title>国服第一李白参上</title>
-</head>静夜思
+</head>我是韩钲
 
 <body>
-<img src="2.jpg" width="90" height="120" alt="2" />
-<p>床前明月光，</p>
-<p>疑是地上霜。</p>
-<p>举头望明月，</p>
-<p>低头思故乡。</p>
+<p>我是中传韩尬钲</p>
+<p>上头细来下头粗 </p>
+<p>若将韩钲倒过来</p>
+<p>下头细来上头粗</p>
 
+<img src="2.jpg" width="90" height="120" alt="2" />
 </body>
+<img src="2.jpg" width="90" height="120" alt="2" />
 </html>
